# chip8

./: .gitignore  CMakeLists.txt
include/: chip8.hpp  interpreter.hpp
src/: chip8.cpp  interpreter.cpp  main.cpp
